--- a/NorthWind.Sales.Backend.UseCases/NorthWind.Sales.Backend.UseCases.csproj
+++ b/NorthWind.Sales.Backend.UseCases/NorthWind.Sales.Backend.UseCases.csproj
@@ -13,4 +13,19 @@
     <ProjectReference Include="..\NorthWind.Sales.Backend.BusinessObjects\NorthWind.Sales.Backend.BusinessObjects.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\CreateOrderMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CreateOrderMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\CreateOrderMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>CreateOrderMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
