--- a/NorthWind.Razor.Components/NorthWind.Razor.Components.csproj
+++ b/NorthWind.Razor.Components/NorthWind.Razor.Components.csproj
@@ -18,5 +18,9 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NorthWind.Validation.Entities\NorthWind.Validation.Entities.csproj" />
+  </ItemGroup>
+
 
 </Project>
