agregando un atrapador de excepciones a nivel de respuesta desde un cliente httpclient

--- a/NorthWind.Sales.Frontend.WebApiGateways/NorthWind.Sales.Frontend.WebApiGateways.csproj
+++ b/NorthWind.Sales.Frontend.WebApiGateways/NorthWind.Sales.Frontend.WebApiGateways.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NorthWind.HttpDelegatingHandlers\NorthWind.HttpDelegatingHandlers.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Frondend.BusinessObjects\NorthWind.Sales.Frontend.BusinessObjects.csproj" />
   </ItemGroup>
 
