--- a/NorthWind.Sales.WebApi/appsettings.json
+++ b/NorthWind.Sales.WebApi/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "DbOptions": {
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindDb2024"
+  },
+  "SmtpOptions": {
+    "SmtpHost": "",
+    "SmtpHostPort": "465",
+    "SmtpUserName": "",
+    "SmtpPassword": "",
+    "SenderEmail": "no-reply@northwind.com",
+    "AdministratorEmail": "admin@northwind.com"
   }
 }
