implementado log de dominio

--- a/NorthWind.Sales.Backend.UseCases/NorthWind.Sales.Backend.UseCases.csproj
+++ b/NorthWind.Sales.Backend.UseCases/NorthWind.Sales.Backend.UseCases.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NorthWind.Sales.Backend.BusinessObjects\NorthWind.Sales.Backend.BusinessObjects.csproj" />
+	  <ProjectReference Include="..\NorthWind.Events\NorthWind.Events.csproj" />
   </ItemGroup>
 
   <ItemGroup>
