--- a/NorthWind.Sales.WebApi/appsettings.json
+++ b/NorthWind.Sales.WebApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "DbOptions": {
-    "ConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindDb2024"
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindDb2024",
+    "DomainLogsConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindLogsDb"
   },
   "SmtpOptions": {
     "SmtpHost": "",
