--- a/NorthWind.Sales.Backend.BusinessObjects/NorthWind.Sales.Backend.BusinessObjects.csproj
+++ b/NorthWind.Sales.Backend.BusinessObjects/NorthWind.Sales.Backend.BusinessObjects.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\NorthWind.DomainLogs.Entities\NorthWind.DomainLogs.Entities.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Entities\NorthWind.Sales.Entities.csproj" />
     <ProjectReference Include="..\NorthWind.Sales.Validators.Entities\NorthWind.Sales.Validators.Entities.csproj" />
+    <ProjectReference Include="..\NorthWind.Transactions.Entities\NorthWind.Transactions.Entities.csproj" />
     <ProjectReference Include="..\NorthWindExceptions.Entities\NorthWind.Exceptions.Entities.csproj" />
   </ItemGroup>
 
