--- a/NorthWind.Membership/NorthWind.Membership.Entities/NorthWind.Membership.Entities.csproj
+++ b/NorthWind.Membership/NorthWind.Membership.Entities/NorthWind.Membership.Entities.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NorthWind.Validation.Entities\NorthWind.Validation.Entities.csproj" />
+    <PackageReference Include="NorthWind.Validation.Entities" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
