--- a/NorthWind.Membership/NorthdWind.Membership.Backend.AspNetIdentity/NorthdWind.Membership.Backend.AspNetIdentity.csproj
+++ b/NorthWind.Membership/NorthdWind.Membership.Backend.AspNetIdentity/NorthdWind.Membership.Backend.AspNetIdentity.csproj
@@ -4,20 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-	
+
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.11.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NorthWind.Sales.Bacnkend.Repositories\NorthWind.Sales.Backend.Repositories.csproj" />
+    <PackageReference Include="NorthWind.Membership.Entities" Version="1.0.1" />
+    <PackageReference Include="NorthWind.Result.Entities" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
