finalizado el membership del lado del backend

--- a/NorthWind.Membership/NorthWind.Membership.Backend.Core/NorthWind.Membership.Backend.Core.csproj
+++ b/NorthWind.Membership/NorthWind.Membership.Backend.Core/NorthWind.Membership.Backend.Core.csproj
@@ -6,12 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NorthWind.Membership.Entities" Version="1.0.1" />
     <PackageReference Include="NorthWind.Result.Entities" Version="1.0.0" />
   </ItemGroup>
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\NorthWind.Membership.Entities\NorthWind.Membership.Entities.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
