--- a/NorthWind.Sales.WebApi/appsettings.json
+++ b/NorthWind.Sales.WebApi/appsettings.json
@@ -10,6 +10,9 @@
     "ConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindDb2024",
     "DomainLogsConnectionString": "Server=(localdb)\\mssqllocaldb;DataBase=NorthWindLogsDb"
   },
+  "MembershipDbOptions": {
+    "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=NorthWinUserDb2024"
+  },
   "SmtpOptions": {
     "SmtpHost": "",
     "SmtpHostPort": "465",
