--- a/NorthWind.Membership/NorthWind.Membership.Entities/NorthWind.Membership.Entities.csproj
+++ b/NorthWind.Membership/NorthWind.Membership.Entities/NorthWind.Membership.Entities.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-	  <Version>1.0.1</Version>
+	  <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Resources\UserLoginMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UserLoginMessages.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\UserRegistrationMessages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -19,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Resources\UserLoginMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UserLoginMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\UserRegistrationMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>UserRegistrationMessages.Designer.cs</LastGenOutput>
