--- a/NorthWind.Membership/NorthWind.Membership.Backend.Core/NorthWind.Membership.Backend.Core.csproj
+++ b/NorthWind.Membership/NorthWind.Membership.Backend.Core/NorthWind.Membership.Backend.Core.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.5.1" />
+    <PackageReference Include="NorthWind.Membership.Entities" Version="1.0.2" />
     <PackageReference Include="NorthWind.Result.Entities" Version="1.0.0" />
   </ItemGroup>
 
@@ -14,10 +16,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\NorthWind.Membership.Entities\NorthWind.Membership.Entities.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
+	  <Compile Update="Resources\UserLoginMessages.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>UserLoginMessages.resx</DependentUpon>
+	  </Compile>
 	  <Compile Update="Resources\UserRegistrationMessages.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -26,6 +29,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Update="Resources\UserLoginMessages.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>UserLoginMessages.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	  <EmbeddedResource Update="Resources\UserRegistrationMessages.resx">
 	    <Generator>ResXFileCodeGenerator</Generator>
 	    <LastGenOutput>UserRegistrationMessages.Designer.cs</LastGenOutput>
