agregando la funcionalidad de login

--- a/NorthWind.Sales.WebApi/appsettings.json
+++ b/NorthWind.Sales.WebApi/appsettings.json
@@ -20,5 +20,11 @@
     "SmtpPassword": "",
     "SenderEmail": "no-reply@northwind.com",
     "AdministratorEmail": "admin@northwind.com"
+  },
+  "JwtOptions": {
+    "SecurityKey": "KeyMustBeAtlest32CharactersLong",
+    "ValidIssuer": "NorthWindSales",
+    "ValidAudience": "NorthWindSalesClient",
+    "ExpireInMinutes" :  1440
   }
 }
