--- a/NorthWind.Membership/NorthWind.Membership.Frondend.RazorViews/NorthWind.Membership.Frondend.RazorViews.csproj
+++ b/NorthWind.Membership/NorthWind.Membership.Frondend.RazorViews/NorthWind.Membership.Frondend.RazorViews.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="NorthWind.HttpDelegatingHandlers" Version="1.0.0" />
-    <PackageReference Include="NorthWind.Membership.Entities" Version="1.0.1" />
+    <PackageReference Include="NorthWind.Membership.Entities" Version="1.0.2" />
     <PackageReference Include="NorthWind.Razor.Components" Version="1.0.0" />
   </ItemGroup>
 
@@ -27,6 +28,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>CommonMessages.resx</DependentUpon>
     </Compile>
+    <Compile Update="Resources\UserLoginMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UserLoginMessages.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\UserRegistrationMessages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -38,6 +44,10 @@
     <EmbeddedResource Update="Resources\CommonMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>CommonMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\UserLoginMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UserLoginMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\UserRegistrationMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
