agregando autehnticacion y autorizacion a la api

--- a/NorthWind.Sales.WebApi/NorthWind.Sales.WebApi.csproj
+++ b/NorthWind.Sales.WebApi/NorthWind.Sales.WebApi.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aa395fbd-9305-4603-9f7f-d66f3be15750</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
